# 3d-blachole-raytracer

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
cmake/: zig-toolchain.cmake
include/hittable/: group.hpp  hittable.hpp  plane.hpp  sphere.hpp
include/types/: color.hpp  hit.hpp  image.hpp  interval.hpp  point.hpp  ray.hpp  vec.hpp
src/: main.cpp  stb.cpp
src/hittable/: hittable.cpp  plane.cpp  sphere.cpp
src/types/: color.cpp  image.cpp  point.cpp  ray.cpp  vec.cpp
